Added SocialMedia Links & Contact me secion

--- a/index.html
+++ b/index.html
@@ -46,52 +46,46 @@
                 <ul class="navbar-nav ml-auto nav-flex-icons">
 
 
-                    <li class="nav-item" id="facebook">
+                    <li class="nav-item" id="sm_facebook">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                     </li>
 
 
-                    <li class="nav-item" id="instagram">
+                    <li class="nav-item" id="sm_instagram">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </li>
 
-                    <li class="nav-item" id="twitter">
+                    <li class="nav-item" id="sm_twitter">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
 
 
-                    <li class="nav-item" id="google_plus">
-                        <a class="nav-link waves-effect waves-light">
-                            <i class="fab fa-google-plus-g"></i>
-                        </a>
-                    </li>
-
-                    <li class="nav-item" id="linked_in">
+                    <li class="nav-item" id="sm_linked_in">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </li>
 
 
-                    <li class="nav-item" id="stack_overflow">
+                    <li class="nav-item" id="sm_stack_overflow">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-stack-overflow"></i>
                         </a>
                     </li>
 
-                    <li class="nav-item" id="github">
+                    <li class="nav-item" id="sm_github">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
 
-                    <li class="nav-item" id="email">
+                    <li class="nav-item" id="sm_email">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fas fa-envelope"></i>
                         </a>
@@ -135,7 +129,8 @@
 
                                 <div class="row">
                                     <div class="col-lg-8 mx-auto text-center">
-                                        <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                                        <p class="large text-muted">Five years back I started developing the script in python for automating my minor tasks in linux, And now after years of experience in programming, I have become a professional Android Developer and developed many Android Applications,
+                                           all of my code mainly focuses on easy to read, Efficient, and Modular approch. which is always good practice to become a good team player. </p>
                                     </div>
                                 </div>
                             </div>
@@ -262,6 +257,104 @@
                     </div>
                 </section>
             </div>
+
+
+            <!--Section: Contact v.2-->
+<section class="mb-4">
+
+    <!--Section heading-->
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact me</h2>
+    <!--Section description-->
+    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me directly. I will come back to you within
+        a matter of hours to help you.</p>
+
+    <div class="row">
+
+        <!--Grid column-->
+        <div class="col-md-9 mb-md-0 mb-5">
+            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text" id="name" name="name" class="form-control">
+                            <label for="name" class="">Your name</label>
+                        </div>
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text" id="email" name="email" class="form-control">
+                            <label for="email" class="">Your email</label>
+                        </div>
+                    </div>
+                    <!--Grid column-->
+
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="md-form mb-0">
+                            <input type="text" id="subject" name="subject" class="form-control">
+                            <label for="subject" class="">Subject</label>
+                        </div>
+                    </div>
+                </div>
+                <!--Grid row-->
+
+                <!--Grid row-->
+                <div class="row">
+
+                    <!--Grid column-->
+                    <div class="col-md-12">
+
+                        <div class="md-form">
+                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                            <label for="message">Your message</label>
+                        </div>
+
+                    </div>
+                </div>
+                <!--Grid row-->
+
+            </form>
+
+            <div class="text-center text-md-left">
+                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+            </div>
+            <div class="status"></div>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-3 text-center">
+            <ul class="list-unstyled mb-0">
+                <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                    <p>Islamabad,4400, Pakistan</p>
+                </li>
+
+                <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                    <p>+ 92 312 3713 004</p>
+                </li>
+
+                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                    <p>aafaq@msn.com</p>
+                </li>
+            </ul>
+        </div>
+        <!--Grid column-->
+
+    </div>
+
+</section>
+<!--Section: Contact v.2-->
 
 
         </div>
