Minor Functionalites and Extras

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+
+>
 
 <head>
     <!-- Required meta tags -->
@@ -14,6 +16,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -43,9 +47,8 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                 </ul>
+
                 <ul class="navbar-nav ml-auto nav-flex-icons">
-
-
                     <li class="nav-item" id="sm_facebook">
                         <a class="nav-link waves-effect waves-light">
                             <i class="fab fa-facebook-f"></i>
@@ -96,7 +99,6 @@
         </nav>
 
         <div class="view intro-2" style="text-align: end;">
-
             <div class="full-bg-img">
                 <!--rgba-blue-light-->
                 <div class="mask flex-center rgba-black-light ">
@@ -257,108 +259,115 @@
                     </div>
                 </section>
             </div>
+        </div>
 
+ <!--Section: Contact v.2-->
 
-            <!--Section: Contact v.2-->
-<section class="mb-4">
+<section class="mb-4 card" id="aboutMe" style="margin-top:10em; margin-left: 3em; margin-right: 3em; padding: 3em; ">
 
-    <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact me</h2>
-    <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me directly. I will come back to you within
-        a matter of hours to help you.</p>
+<!--Section heading-->
+<h2 class="h1-responsive font-weight-bold text-center my-4">Contact me</h2>
+<!--Section description-->
+<p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me directly. I will come back to you within
+    a matter of hours to help you.</p>
 
-    <div class="row">
+<div class="row">
+    <!--Grid column-->
+    <div class="col-md-9 mb-md-0 mb-5">
+        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
-        <!--Grid column-->
-        <div class="col-md-9 mb-md-0 mb-5">
-            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+            <!--Grid row-->
+            <div class="row">
 
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control">
-                            <label for="name" class="">Your name</label>
-                        </div>
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control">
-                            <label for="email" class="">Your email</label>
-                        </div>
-                    </div>
-                    <!--Grid column-->
-
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" class="form-control">
-                            <label for="subject" class="">Subject</label>
-                        </div>
+                <!--Grid column-->
+                <div class="col-md-6">
+                    <div class="md-form mb-0">
+                        <input type="text" id="name" name="name" class="form-control">
+                        <label for="name" class="">Your name</label>
                     </div>
                 </div>
-                <!--Grid row-->
+                <!--Grid column-->
 
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-12">
-
-                        <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                            <label for="message">Your message</label>
-                        </div>
-
+                <!--Grid column-->
+                <div class="col-md-6">
+                    <div class="md-form mb-0">
+                        <input type="text" id="email" name="email" class="form-control">
+                        <label for="email" class="">Your email</label>
                     </div>
                 </div>
-                <!--Grid row-->
+                <!--Grid column-->
 
-            </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
             </div>
-            <div class="status"></div>
+            <!--Grid row-->
+
+            <!--Grid row-->
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="md-form mb-0">
+                        <input type="text" id="subject" name="subject" class="form-control">
+                        <label for="subject" class="">Subject</label>
+                    </div>
+                </div>
+            </div>
+            <!--Grid row-->
+
+            <!--Grid row-->
+            <div class="row">
+
+                <!--Grid column-->
+                <div class="col-md-12">
+
+                    <div class="md-form">
+                        <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                        <label for="message">Your message</label>
+                    </div>
+
+                </div>
+            </div>
+            <!--Grid row-->
+
+        </form>
+
+        <div class="text-center text-md-left">
+            <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
         </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-md-3 text-center">
-            <ul class="list-unstyled mb-0">
-                <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Islamabad,4400, Pakistan</p>
-                </li>
-
-                <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 92 312 3713 004</p>
-                </li>
-
-                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p>aafaq@msn.com</p>
-                </li>
-            </ul>
-        </div>
-        <!--Grid column-->
-
+        <div class="status"></div>
     </div>
+    <!--Grid column-->
+
+    <!--Grid column-->
+    <div class="col-md-3 text-center">
+        <ul class="list-unstyled mb-0">
+            <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                <p>Islamabad,4400, Pakistan</p>
+            </li>
+
+            <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                <p>+ 92 312 3713 004</p>
+            </li>
+
+            <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                <p>aafaq@msn.com</p>
+            </li>
+        </ul>
+    </div>
+    <!--Grid column-->
+
+</div>
 
 </section>
-<!--Section: Contact v.2-->
-
-
-        </div>
-
+<!-- Footer -->
+<footer class="page-footer font-small unique-color-dark pt-4">
+      <!-- Footer Elements -->
+  
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://aafaaqali.github.io/Portfolio/"> Aafaq Ali</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->
     </header>
     <!--Main Navigation-->
     <!-- JQuery -->
