corrected Minor errors

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                         <ul class="timeline">
                             <li>
-                                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                                <div class="timeline-image"><img class="rounded-circle img-fluid"  /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
                                         <h4>2016-2020</h4>
@@ -271,7 +271,7 @@
 <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact me directly. I will come back to you within
     a matter of hours to help you.</p>
 
-<div class="row">
+<div class="row" id="sm_email">
     <!--Grid column-->
     <div class="col-md-9 mb-md-0 mb-5">
         <form id="contact-form" name="contact-form" action="mail.php" method="POST">
