--- a/index.html
+++ b/index.html
@@ -149,16 +149,43 @@
                             <h2 class="section-heading text-uppercase">Time laps of my carrier</h2>
                             <h3 class="section-subheading text-muted">Time throughout which I have had many achievements.</h3>
                         </div>
+
                         <ul class="timeline">
+                            <li class="timeline">
+                                <div class="timeline-image"><img class="rounded-circle img-fluid"  /></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h4>Dec 2020 -</h4>
+                                        <h4 class="subheading">Currently </h4>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p class="text-muted">Currently Working in LEED PVT.LTD as a Senior Android Developer, and really Loving it</p>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li class="timeline-inverted">
+                                <div class="timeline-image"><img class="rounded-circle img-fluid"  /></div>
+                                <div class="timeline-panel">
+                                    <div class="timeline-heading">
+                                        <h4>Sep 2020 - Dec 2020</h4>
+                                        <h4 class="subheading">Currently </h4>
+                                    </div>
+                                    <div class="timeline-body">
+                                        <p class="text-muted">Worked in CUBICODES as a Senior Android Developer</p>
+                                    </div>
+                                </div>
+                            </li>
+
                             <li>
                                 <div class="timeline-image"><img class="rounded-circle img-fluid"  /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>2016-2020</h4>
+                                        <h4>2019-2020</h4>
                                         <h4 class="subheading">Currently </h4>
                                     </div>
                                     <div class="timeline-body">
-                                        <p class="text-muted">Currently a Software Developer at Grithx Solutions Pvt. And a Freelancer</p>
+                                        <p class="text-muted">Worked as Software Developer at Grithx Solutions Pvt. And a Freelancer</p>
                                     </div>
                                 </div>
                             </li>
@@ -167,7 +194,7 @@
                                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>February 2020</h4>
+                                        <h4>Feb 2020</h4>
                                         <h4 class="subheading">Runnerup Inovatia 2020</h4>
                                     </div>
                                     <div class="timeline-body">
@@ -181,7 +208,7 @@
                                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>February 2019</h4>
+                                        <h4>Feb 2019</h4>
                                         <h4 class="subheading">Won Inovatia 2019</h4>
                                     </div>
                                     <div class="timeline-body">
@@ -195,7 +222,7 @@
                                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>December 2018</h4>
+                                        <h4>Dec 2018</h4>
                                         <h4 class="subheading">Started Freelancing Carrier</h4>
                                     </div>
                                     <div class="timeline-body">
@@ -208,7 +235,7 @@
                                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>Augest 2017</h4>
+                                        <h4>Aug 2017</h4>
                                         <h4 class="subheading">Attended 6 month long Android workshop at Pearlcom International</h4>
                                     </div>
                                     <div class="timeline-body">
@@ -233,7 +260,7 @@
                                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>February 2017</h4>
+                                        <h4>Feb 2017</h4>
                                         <h4 class="subheading">Transition From C++ to Java</h4>
                                     </div>
                                     <div class="timeline-body">
@@ -246,7 +273,7 @@
                                 <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/round/preston.jpeg" alt="" /></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
-                                        <h4>Augest 2016</h4>
+                                        <h4>Aug 2016</h4>
                                         <h4 class="subheading">First day at Preston University Islamabad</h4>
                                     </div>
                                     <div class="timeline-body">
